--- a/profile/profile_asAdmin.html
+++ b/profile/profile_asAdmin.html
@@ -82,13 +82,10 @@
                 <span class="badge badge-success">61</span>
             </div>
             <div class="row">
-                <a href="#">Read Feedback</a>
+                <a href="#" class="btn btn-primary ">Promote to Admin</a>
             </div>
             <div class="row">
-                <button type="button">Promote do Admin</button>
-            </div>
-            <div class="row">
-                <button type="button">Ban User</button>
+                <a href="#" class="btn btn-danger ">Ban User</a>
             </div>
         </div>
 
@@ -156,15 +153,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Computador para minar Bitcoins</a>
+                                            <a href="#">Computer with Keyboard and Mouse</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Technology</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
@@ -177,15 +174,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Sapatilha do Chinês Kim Ung Dos</a>
+                                            <a href="#">Chinese Shoes</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Clothing</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
@@ -200,15 +197,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Carro em 12º mão</a>
+                                            <a href="#">2º hand car</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Cars</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
