--- a/profile/profile_asBanned.html
+++ b/profile/profile_asBanned.html
@@ -70,7 +70,7 @@
                 <p class="email">trollingpages@bidbay.com</p>
             </div>
             <div class="row">
-                <button type="button">Appeal Ban</button>
+                <a href="#" class="btn btn-primary ">Appeal Ban</a>
             </div>
             <div class="row">
                 <p>14 days until ban ends</p>
