--- a/profile/profile_asUser.html
+++ b/profile/profile_asUser.html
@@ -82,10 +82,10 @@
                 <span class="badge badge-success">61</span>
             </div>
             <div class="row">
-                <a href="#">Read Feedback</a>
+                <a href="#" class="btn btn-primary ">Edit Profile</a>
             </div>
             <div class="row">
-                <button type="button">Edit Profile</button>
+                <a href="#" class="btn btn-danger ">Cancel Account</a>
             </div>
         </div>
 
@@ -102,6 +102,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="biddingItems-tab" data-toggle="tab" href="#biddingItems" role="tab" aria-controls="biddingItems" aria-selected="true">Items I'm bidding</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="purchaseHistory-tab" data-toggle="tab" href="#purchaseHistory" role="tab" aria-controls="purchaseHistory" aria-selected="true">Purchase History</a>
             </li>
         </ul>
         <!-- Tab panes -->
@@ -159,15 +162,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Computador para minar Bitcoins</a>
+                                            <a href="#">Computer with Keyboard and Mouse</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Technology</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
@@ -180,15 +183,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Sapatilha do Chinês Kim Ung Dos</a>
+                                            <a href="#">Chinese Shoes</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Clothing</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
@@ -203,15 +206,15 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Carro em 12º mão</a>
+                                            <a href="#">2º hand car</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Cars</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
@@ -233,16 +236,19 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="#">Cofre de Aço</a>
+                                            <a href="#">Steel Lock</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Accessories</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
+                                        </div>
+                                        <div class="row">
+                                            <a href="#" class="btn btn-danger ">Remove</a>
                                         </div>
                                     </div>
                                 </div>
@@ -259,11 +265,14 @@
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Accessories</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
+                                        </div>
+                                        <div class="row">
+                                            <a href="#" class="btn btn-danger ">Remove</a>
                                         </div>
                                     </div>
                                 </div>
@@ -277,7 +286,7 @@
                 <div class="container-fluid">
                     <div class="col-md-12">
                         <ul>
-                            <li id="1res">
+                            <li>
                                 <div class="row">
                                     <div>
                                         <img src="https://http2.mlstatic.com/quadro-pug-pop-art-cachorro-pet-rrs2-decoracao-sala-paspatur-D_NQ_NP_761901-MLB20437861082_102015-F.jpg" alt="result 1" width="250" height="150">
@@ -289,16 +298,16 @@
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Accessories</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </li>
-                            <li id="2res">
+                            <li>
                                 <div class="row">
                                     <div>
                                         <img src="https://rukminim1.flixcart.com/image/832/832/book/1/5/9/a-game-of-thrones-the-story-continues-the-complete-box-set-of-7-books-original-imadfgzztg4ahyhk.jpeg?q=70" alt="result 1" width="250" height="150">
@@ -310,16 +319,16 @@
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Books</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </li>
-                            <li id="3res">
+                            <li>
                                 <div>
                                 </div>
                                 <div class="row">
@@ -333,15 +342,44 @@
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
                                             <div class="col">
-                                                <p>Sub Categoria</p>
+                                                <p>Technology</p>
                                             </div>
                                             <div class="col">
-                                                <p>Time</p>
+                                                <p>Time Left:</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="purchaseHistory" role="tabpanel" aria-labelledby="purchaseHistory-tab">
+                <div class="container-fluid">
+                    <div class="col-md-12">
+                        <ul>
+                            <li>
+                                <div class="row">
+                                    <div>
+                                        <img src="https://img2.insania.com/imagens/30000/3026/02.jpg" alt="result 1" width="250" height="150">
+                                    </div>
+                                    <div class="col align-self-center">
+                                        <h4>
+                                            <a href="#">Dog Collar with Chip</a>
+                                        </h4>
+                                        <div class="row padding-product-info">
+                                            <div class="w-100"></div>
+                                            <div class="col">
+                                                <p>Animals</p>
+                                            </div>
+                                            <div class="col">
+                                                <p>Purchased March, 1st</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
