--- a/profile/bannedProfile_asVisitor.html
+++ b/profile/bannedProfile_asVisitor.html
@@ -43,7 +43,7 @@
     <div class="dropdown" id="authentication">
         <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-            Administrator
+            JohnDoe39012
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
             <a class="dropdown-item" href="#">View Profile</a>
@@ -68,12 +68,6 @@
             </div>
             <div class="row">
                 <p class="email">trollingpages@bidbay.com</p>
-            </div>
-            <div class="row">
-                <a href="#" class="btn btn-primary ">Desban User</a>
-            </div>
-            <div class="row">
-                <a href="#" class="btn btn-primary ">Change Ban Duration</a>
             </div>
             <div class="row">
                 <p>14 days until ban ends</p>
