add home page for landing_page views and notification-circle beta

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
     <form action="search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
@@ -90,7 +90,7 @@
 <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
         <ul class="nav d-flex justify-content-center">
             <li class="nav-item active">
-                <a class="nav-link text-white" href="landing_page.html">Home </a>
+                <a class="nav-link text-white" href="home/landing_page.html">Home </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="about.html">About</a>
