--- a/home/landing_page.html
+++ b/home/landing_page.html
@@ -16,9 +16,9 @@
         <!-- bootswatch flatly theme -->  
         <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         <!-- links -->
-        <link rel="stylesheet" href="css/landing_page.css">
-        <link rel="stylesheet" href="css/header.css">
-        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="../css/landing_page.css">
+        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/footer.css">
     </head>
     <body class="website-body">
 
@@ -27,7 +27,7 @@
             <!-- logo -->
             <a href="landing_page.html" class="navbar-brand">BidBay</a>
             <!-- search bar -->
-            <form action="search.html" method="get" class="px-2" id="search-bar">
+            <form action="../search.html" method="get" class="px-2" id="search-bar">
                 <div class="d-flex">
                     <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
                     <select class="form-control rounded-0 col-2 " id="search-categories">
@@ -47,10 +47,10 @@
             <div class="navbar-collapse collapse justify-content-end" id="authentication">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-right" href="login.html">Login</a>
+                        <a class="nav-link text-right" href="../login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-right" href="register.html">Register</a>
+                        <a class="nav-link text-right" href="../register.html">Register</a>
                     </li>
                 </ul>
             </div>  
@@ -64,7 +64,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="d-block " src="https://placeimg.com/1600/900/tech" alt="First slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Some Item</h3>
@@ -73,7 +73,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Another Newish Item</h3>
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="d-block " src="https://placeimg.com/400/300/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Another Newish Item</h3>
@@ -108,7 +108,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -123,7 +123,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Grey Camera</h3>
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Samsung Tablet</h3>
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Pixel X2 4GB</h3>
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">toyota motorcycle</h3>
@@ -175,7 +175,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some other new item</h3>
@@ -197,7 +197,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -212,7 +212,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -225,7 +225,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -238,7 +238,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -251,7 +251,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -264,7 +264,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="product.html">
+                        <a href="../product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -288,10 +288,10 @@
                     <a class="nav-link text-white" href="landing_page.html">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="about.html">About</a>
+                    <a class="nav-link text-white" href="../about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="FAQ.html">FAQ</a>
+                    <a class="nav-link text-white" href="../FAQ.html">FAQ</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
