--- a/profile/bannedProfile_asAdmin.html
+++ b/profile/bannedProfile_asAdmin.html
@@ -87,7 +87,7 @@
 <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
     <ul class="nav d-flex justify-content-center">
         <li class="nav-item active">
-            <a class="nav-link text-white" href="../landing_page.html">Home </a>
+            <a class="nav-link text-white" href="../home/landing_page.html">Home </a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="../about.html">About</a>
