--- a/FAQ.html
+++ b/FAQ.html
@@ -38,12 +38,13 @@
                     </div>
                 </form>
                 <!-- authentication links -->
+                <a id="mail-icon" class="far fa-envelope fixed-size mx-auto" href="#"></a>
                 <div class="dropdown" id="authentication">
-                    <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
                          JohnDoe39012
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
+                    <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
                         <a class="dropdown-item" href="profile_page.html">New Auction</a>
                         <a class="dropdown-item" href="profile_page.html">View Profile</a>
                         <a class="dropdown-item" href="chat.html">View Messages</a>
