Finished Profile and About?!

--- a/profile/profile_asUser.html
+++ b/profile/profile_asUser.html
@@ -363,6 +363,35 @@
                             <li>
                                 <div class="row">
                                     <div>
+                                        <img src="https://www.directofficesupply.co.uk/components/com_virtuemart/shop_image/product/a6a464b6cccdfdef717e6eb5a0838fa3.jpg" alt="result 1" width="250" height="150">
+                                    </div>
+                                    <div class="col align-self-center">
+                                        <h4>
+                                            <a href="#">Office Desk</a>
+                                        </h4>
+                                        <div class="row padding-product-info">
+                                            <div class="w-100"></div>
+                                            <div class="col">
+                                                <p>Accessories</p>
+                                            </div>
+                                            <div class="col">
+                                                <p>Purchased March, 4th</p>
+                                            </div>
+                                        </div>
+                                        <div class="row padding-product-info">
+                                            <div class="col">
+                                                <a href="#" class="btn btn-primary ">Leave Feedback</a>
+                                            </div>
+                                            <div class="col">
+                                                <a href="#" class="btn btn-danger ">Ask for Refund</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div>
                                         <img src="https://img2.insania.com/imagens/30000/3026/02.jpg" alt="result 1" width="250" height="150">
                                     </div>
                                     <div class="col align-self-center">
