--- a/about.html
+++ b/about.html
@@ -1,61 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>About</title>
-            <!-- Required meta tags -->
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>About Us</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            <!-- Bootstrap -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
-            <!-- awesome fonts -->
-            <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-            <!-- bootswatch flatly theme -->
-            <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
-            <!-- links -->
-            <link rel="stylesheet" href="css/header.css">
-            <link rel="stylesheet" href="css/footer.css">
-        </head>
-<body>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
+    <!-- awesome fonts -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- bootswatch flatly theme -->
+    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
+    <!-- links -->
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+</head>
+<body class="website-body">
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="index.html" class="navbar-brand">BidBay</a>
     <!-- search bar -->
     <form action="search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <label for="search-categories"></label><select class="form-control rounded-0 col-2 " id="search-categories">
-                <option selected> All Categories </option>
-                <option>Technology</option>
-                <option>Automobiles</option>
-                <option>Clothes</option>
-            </select>
+            <option selected> All Categories </option>
+            <option>Technology</option>
+            <option>Automobiles</option>
+            <option>Clothes</option>
+        </select>
             <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
+    <!-- mobile authentication button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <!-- authentication links -->
-    <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-            JohnDoe39012
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="profile_page.html">View Profile</a>
-            <a class="dropdown-item" href="chat.html">View Messages</a>
-            <a class="dropdown-item" href="#">Log out</a>
-        </div>
+    <div class="navbar-collapse collapse justify-content-end" id="authentication">
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-right" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-right" href="register.html">Register</a>
+            </li>
+        </ul>
     </div>
 </nav>
 
 <div class="container">
 
-    <video width="1000" height="600" autoplay>
-        <source src="media/commercial.mp4" type="video/mp4"> 
+    <video width="1000" height="600" autoplay id="commercial">
+        <source src="media/commercial.mp4" type="video/mp4">
     </video>
 
     <h3 class="border-bottom pb-1 mb-4">About BidBay </h3>
@@ -63,48 +66,46 @@
 
     <h4 class="border-bottom pb-1 mb-4 mt-5">Contact the Team </h4>
     <div class="container-fluid">
-    <div class="row">
-        <div class="col-6">
-            <p> Afonso Pinto </p>
-            <p> Cristiana Ribeiro </p>
-            <p> Rostyslav Khoptiy </p>
-            <p> Tomás Oliveira</p>
-        </div>
+        <div class="row" id="creators">
+            <div class="col-6">
+                <p>Afonso Pinto</p>
+                <p>Cristiana Ribeiro</p>
+                <p>Rostyslav Khoptiy</p>
+                <p>Tomás Oliveira</p>
+            </div>
 
-        <div class="col-6">
-            <p> up201503316@fe.up.pt</p>
-            <p> up201305188@fe.up.pt  </p>
-            <p> up201506219@fe.up.pt </p>
-            <p> up201504746@fe.up.pt </p>
+            <div class="col-3">
+                <p>up201503316@fe.up.pt</p>
+                <p>up201305188@fe.up.pt</p>
+                <p>up201506219@fe.up.pt</p>
+                <p>up201504746@fe.up.pt</p>
             </div>
 
 
+        </div>
     </div>
-</div>
 
 
 
 </div>
-<!-- footer -->
 <!-- footer -->
 <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
-        <ul class="nav d-flex justify-content-center">
-            <li class="nav-item active">
-                <a class="nav-link text-white" href="home/landing_page.html">Home </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="FAQ.html">FAQ</a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
-            <li class="nav-item">
-                <span class="align-middle text-white">Website created by group 64 for LBAW</span>
-            </li>
-        </ul>
-    </nav>
+    <ul class="nav d-flex justify-content-center">
+        <li class="nav-item active">
+            <a class="nav-link text-white" href="index.html">Home </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="FAQ.html">FAQ</a>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
+        <li class="nav-item">
+            <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+        </li>
+    </ul>
 </nav>
 </body>
 </html>
