Profile Refs fixed

--- a/home/landing_page_user.html
+++ b/home/landing_page_user.html
@@ -32,9 +32,9 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="search.html" method="get" class="px-2" id="search-bar">
+    <form action="../search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -56,8 +56,8 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
             <a class="dropdown-item" href="#">Sell</a>
-            <a class="dropdown-item" href="profile_page.html">View Profile</a>
-            <a class="dropdown-item" href="chat.html">View Messages <i class="fas fa-circle notification-circle"></i> </a>
+            <a class="dropdown-item" href="../profile/profile.html">View Profile</a>
+            <a class="dropdown-item" href="../chat.html">View Messages <i class="fas fa-circle notification-circle"></i> </a>
             <a class="dropdown-item" href="#">Log out</a>
         </div>
     </div>
