--- a/product/product.html
+++ b/product/product.html
@@ -319,7 +319,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg" class="img-review img-fluid">
-                        <div class="review-block-name"><a href="../profile_page.html">MrBurns</a></div>
+                        <div class="review-block-name"><a href="../profile/profile.html">MrBurns</a></div>
                         <div class="review-block-date">March 01, 2018</div>
                     </div>
                     <div class="col-sm-9">
