--- a/FAQ.html
+++ b/FAQ.html
@@ -45,11 +45,11 @@
                 <div class="dropdown" id="authentication">
                     <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-                         JohnDoe39012
+                         MrBurns001
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-                        <a class="dropdown-item" href="profile_page.html">New Auction</a>
-                        <a class="dropdown-item" href="profile_page.html">Profile</a>
+                        <a class="dropdown-item" href="product/product_asSeller.html">New Auction</a>
+                        <a class="dropdown-item" href="profile/profile_asUser.html">Profile</a>
                         <a class="dropdown-item" href="chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
                         </a>
                         <a class="dropdown-item" href="#">Log out</a>
