--- a/profile/profile_asAdmin.html
+++ b/profile/profile_asAdmin.html
@@ -25,9 +25,9 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="#" class="navbar-brand extra-hide">BidBay</a>
+    <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form class="px-2" id="search-bar">
+    <form action="../search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <label for="search-categories"></label><select class="form-control rounded-0 col-2 " id="search-categories">
@@ -40,14 +40,19 @@
         </div>
     </form>
     <!-- authentication links -->
+    <a class="fa-stack fa-3x" id="mail-icon" href="#">
+        <i class="far fa-envelope fa-stack-2x"></i>
+        <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">27</strong>
+    </a>
     <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
             Administrator
         </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="#">View Profile</a>
-            <a class="dropdown-item" href="#">View Messages</a>
+        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
+            <a class="dropdown-item" href="profile_asUser.html">Profile</a>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
+            </a>
             <a class="dropdown-item" href="#">Log out</a>
         </div>
     </div>
