--- a/home/landing_page_user.html
+++ b/home/landing_page_user.html
@@ -29,39 +29,46 @@
 </head>
 <body class="website-body">
 
-<!-- header -->
-<nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
-    <!-- logo -->
-    <a href="landing_page.html" class="navbar-brand extra-hide">BidBay</a>
-    <!-- search bar -->
-    <form action="../search.html" method="get" class="px-2" id="search-bar">
-        <div class="d-flex">
-            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
-                   id="search-input">
-            <select class="form-control rounded-0 col-2 " id="search-categories">
-                <option selected> All Categories</option>
-                <option>Technology</option>
-                <option>Automobiles</option>
-                <option>Clothes</option>
-            </select>
-            <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
-        </div>
-    </form>
-    <!-- authentication links -->
-    <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-            <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-            JohnDoe39012 <i class="fas fa-circle notification-circle"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="#">Sell</a>
-            <a class="dropdown-item" href="../profile/profile.html">View Profile</a>
-            <a class="dropdown-item" href="../chat.html">View Messages <i class="fas fa-circle notification-circle"></i> </a>
-            <a class="dropdown-item" href="#">Log out</a>
-        </div>
-    </div>
-</nav>
+        <body class="website-body">
+                <!-- header -->
+                <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
+                        <!-- logo -->
+                        <a href="landing_page_user.html" class="navbar-brand extra-hide">BidBay</a>
+                        <!-- search bar -->
+                        <form action="search.html" method="get" class="" id="search-bar">
+                            <div class="d-flex">
+                                <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                                <select class="form-control rounded-0 col-2 " id="search-categories">
+                                    <option selected> All Categories </option>
+                                    <option>Technology</option>
+                                    <option>Automobiles</option>
+                                    <option>Clothes</option>
+                                </select>
+                                <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+                            </div>
+                        </form>
+                        <!-- authentication links -->
+                        <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
+                            <i class="far fa-envelope fa-stack-2x"></i>
+                            <!-- place numbers of messages here -->
+                            <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
+                                27
+                            </strong>
+                        </a>
+                        <div class="dropdown" id="authentication">
+                            <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
+                                 MrBurns001
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
+                                <a class="dropdown-item" href="../sell_page.html">New Auction</a>
+                                <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
+                                <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
+                                </a>
+                                <a class="dropdown-item" href="landing_page.html">Log out</a>
+                            </div>
+                        </div>  
+                    </nav>
 
 <div class="container mb-5">
 
