add link to messages

--- a/chat.html
+++ b/chat.html
@@ -8,9 +8,10 @@
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- awesome fonts -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <!-- bootswatch flatly theme -->
@@ -20,6 +21,9 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
 </head>
 <body class="website-body">
     
@@ -126,84 +130,84 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>
                         <td> BidBay </td>  
                         <td>You win!</td>
                         <td>#Renault Clio Car</td>
                         <td>27/02</td>
                     </tr>
-                    <tr>
-                        <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
+                    <tr class="clickable-row" data-href="message.html">
+                        <th scope="row" href="message.html"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
                         <td> John </td> 
-                        <td>Payment</td>
+                        <td>Payment</td> 
                         <td>#Tenis nike</td>
                         <td>21/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
                         <td> Roger </td> 
                         <td> Meet me</td>
                         <td>#computer231</td>
                         <td>20/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
                         <td> Sandra </td> 
                         <td>Payment</td>
                         <td>#Renault Clio Car</td>
                         <td>19/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                   
                         <td> Jose </td> 
                         <td>Payment</td>
                         <td>#Tenis nike</td>
                         <td>18/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                   
                         <td> Theresa </td> 
                         <td>Payment</td>
                         <td>#computer231</td>
                         <td>15/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
                         <td> Anthony </td> 
                         <td>Payment</td>
                         <td>#Renault Clio Car</td>
                         <td>27/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                   
                         <td> John </td> 
                         <td>Doubt</td>
                         <td>#Tenis nike</td>
                         <td>21/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                  
                         <td> Mary </td> 
                         <td>Payment</td>
                         <td>#computer231</td>
                         <td>20/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                    
                         <td> BidBay </td> 
                         <td>You win!</td>
                         <td>#Renault Clio Car</td>
                         <td>19/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                 
                         <td> Peter </td> 
                         <td>Payment</td>
                         <td>#Tenis nike</td>
                         <td>18/02</td>
                     </tr>
-                    <tr>
+                    <tr class="clickable-row" data-href="message.html">
                         <th scope="row"> <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp; <a href="#"><i class="far fa-star"></i></a>  &nbsp; &nbsp; &nbsp; <a href="#"><i class="fas fa-trash-alt"></i></a></th>                 
                         <td> BidBay </td> 
                         <td> You win! </td>
@@ -235,4 +239,12 @@
     </ul>
 </nav>
 </body>
+
+<script type="text/javascript">
+$(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.document.location = $(this).data("href");
+    });
+});
+</script>
 </html>
